# executive-ai-assistant

./: .env.example  .gitignore  README-keyring.md  README.md  pyproject.toml
.plans/: exchange-support-specification.md
.prompt_tracking/: 2025-01-09T11-45-30-stage-2-verification-completion.md  2025-01-09T14-44-08-verify-stage-5.md  2025-01-09T14-47-48-implement-stage-6.md  2025-01-09T14-56-53-verify-stage-5-qa.md  2025-01-09T15-17-45-stage-8-unit-tests-completion.md  2025-01-09T16-03-28-implement-stage-3.md  2025-01-09T16-11-54-verify-stage-3.md  2025-01-09T16-57-53-implement-stage-7.md  2025-01-09T17-09-13-implement-stage-8.md  2025-01-09T17-18-52-implement-stage-9.md  2025-09-04T14-24-49-exchange-support-specification.md  2025-09-04T14-29-58-staged-implementation-plan.md  2025-09-04T14-35-30-verification-plans.md  2025-09-04T15-00-15-implement-stage-1.md  2025-09-04T15-06-02-verify-stage-1.md  2025-09-04T15-15-43-implement-stage-2.md  2025-09-04T15-21-13-verify-stage-2.md  2025-09-05T08-17-01-implement-stage-4.md  2025-09-05T08-28-21-verify-stage-4.md  2025-09-05T08-35-25-implement-stage-5.md
docs/: exchange-setup.md
eaia/: __init__.py  credentials.py  cron_graph.py  email_provider.py  email_service.py  exchange.py  gmail.py  schemas.py  web_browser_service.py
eaia/main/: config.py  (+5 more)
scripts/: run_ingest.py  start_dev.py  verify_stage_8.py  verify_stage_9.py
tests/: test_config.py  test_email_provider.py  test_exchange_auth.py  test_exchange_calendar_events.py  test_exchange_calendar_invites.py  test_exchange_email_fetching.py  test_exchange_email_sending.py  (+1 more)
(+32 files in other folders)
